Fix parsing of js files via Qt.include()

Make sure to parse them as JavaScript, not as QML, so that certain
keywords such as char or double map to identifiers as expected.

Also removed an unused function.

Fixes: QTBUG-71524
Change-Id: Ie8a8dabe717ee12def6af512943e6d01efcf9876
Reviewed-by: Lars Knoll <lars.knoll@qt.io>