src/qml/jsruntime/qv4script_p.h
@@ -73,10 +73,10 @@ struct Q_QML_EXPORT Script {
         : sourceFile(source), line(line), column(column), sourceCode(sourceCode)
         , context(scope), strictMode(false), inheritContext(false), parsed(false), contextType(mode)
         , vmFunction(nullptr), parseAsBinding(false) {}
-    Script(ExecutionEngine *engine, QmlContext *qml, const QString &sourceCode, const QString &source = QString(), int line = 1, int column = 0)
+    Script(ExecutionEngine *engine, QmlContext *qml, bool parseAsBinding, const QString &sourceCode, const QString &source = QString(), int line = 1, int column = 0)
         : sourceFile(source), line(line), column(column), sourceCode(sourceCode)
         , context(engine->rootContext()), strictMode(false), inheritContext(true), parsed(false)
-        , vmFunction(nullptr), parseAsBinding(true) {
+        , vmFunction(nullptr), parseAsBinding(parseAsBinding) {
         if (qml)
             qmlContext.set(engine, *qml);
     }
@@ -106,8 +106,6 @@ struct Q_QML_EXPORT Script {
             QList<QQmlError> *reportedErrors = nullptr,
             QV4::Compiler::ContextType contextType = QV4::Compiler::ContextType::Global);
     static Script *createFromFileOrCache(ExecutionEngine *engine, QmlContext *qmlContext, const QString &fileName, const QUrl &originalUrl, QString *error);
-
-    static ReturnedValue evaluate(ExecutionEngine *engine, const QString &script, QmlContext *qmlContext);
 };
 
 }
