tests/auto/qml/qqmlecmascript/data/js/include2.js
@@ -2,3 +2,8 @@ test2 = true
 var test2_1 = true
 
 Qt.include("include3.js");
+
+function withTokensAllowedInJSButKeywordsInQML(char)
+{
+    var double;
+}
